--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost; port=3306; database=unibet_db; user=unibet_user; password=123; Persist Security Info =False; Convert Zero Datetime=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Urls": "http://0.0.0.0:8081"
 }
